removed multiple versions of logistic regression

--- a/cifar_logistic_regression.ipynb
+++ b/cifar_logistic_regression.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +122,7 @@
     "    def train(x, y, iteration=100, learning_rate=1):\n",
     "        X = LogisticRegression.add_bias_term(x)  # add constant 1 to account for bias\n",
     "        X = X - np.mean(X)\n",
-    "        X = X / np.std(X)\n",
+    "        # X = X / np.std(X)\n",
     "        labels_count = len(np.unique(y))\n",
     "        weight_matrix = np.zeros((labels_count, np.shape(X)[1]))\n",
     "\n",
@@ -150,12 +150,14 @@
     "            actual_class = np.argmax(y_test[i])\n",
     "            if predicted_class == actual_class:\n",
     "                success += 1\n",
+    "        print(success)\n",
+    "        print(number_of_samples)\n",
     "        return (success / number_of_samples) * 100\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +173,7 @@
        "100.0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration  100  and loss  28.0443095001\n"
+      "Iteration  100  and loss  28.0458110692\n"
      ]
     },
     {
@@ -215,49 +217,679 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration  300  and loss  26.8561007609\n"
+      "Iteration  300  and loss  26.7056910329\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration  400  and loss  26.3741149415\n"
+      "Iteration  400  and loss  26.4017462824\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration  500  and loss  25.6675274976\n"
+      "Iteration  500  and loss  25.6971470881\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration  600  and loss  24.9372855316\n"
+      "Iteration  600  and loss  25.0201792347\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration  700  and loss  24.9349846987\n"
+      "Iteration  700  and loss  24.9372852118\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration  800  and loss  25.2066905465\n"
+      "Iteration  800  and loss  25.7109627585\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration  900  and loss  24.4090620833\n"
+      "Iteration  900  and loss  24.2741330289\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  1000  and loss  24.4399210746\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  1100  and loss  24.3017643698\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  1200  and loss  24.8820225299\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  1300  and loss  24.6747874727\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  1400  and loss  24.6609718022\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  1500  and loss  24.6195247908\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  1600  and loss  24.2741330289\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  1700  and loss  24.1636076651\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  1800  and loss  24.1221606536\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  1900  and loss  24.0807136422\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  2000  and loss  24.1221606536\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  2100  and loss  23.873478585\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  2200  and loss  23.8458472441\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  2300  and loss  24.0945293127\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  2400  and loss  24.1359763241\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  2500  and loss  24.5918934499\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  2600  and loss  24.1083449832\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  2700  and loss  24.536630768\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  2800  and loss  24.3293957108\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  2900  and loss  24.8543911889\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  3000  and loss  25.0754419166\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  3100  and loss  23.8596629146\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  3200  and loss  24.6333404613\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  3300  and loss  24.0807136422\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  3400  and loss  24.4399210746\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  3500  and loss  23.9563726079\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  3600  and loss  23.610980846\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  3700  and loss  24.4399210746\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  3800  and loss  23.4728241412\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  3900  and loss  23.6662435279\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  4000  and loss  24.0807136422\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  4100  and loss  23.5073645168\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  4200  and loss  24.2603216762\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  4300  and loss  24.0047288139\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  4400  and loss  23.5004542028\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  4500  and loss  24.1083516998\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  4600  and loss  23.0583586645\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  4700  and loss  23.8113067086\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  4800  and loss  23.9771011511\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  4900  and loss  23.4244639372\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  5000  and loss  23.8113087875\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  5100  and loss  23.4451956788\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  5200  and loss  22.8649327211\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  5300  and loss  23.2794061938\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  5400  and loss  23.4590065517\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  5500  and loss  23.6178969171\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  5600  and loss  22.8511197693\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  5700  and loss  23.31394529\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  5800  and loss  23.1481540459\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  5900  and loss  23.3830196444\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  6000  and loss  23.4521029543\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  6100  and loss  22.5402631056\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  6200  and loss  22.8994738963\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  6300  and loss  22.3192128577\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  6400  and loss  23.3622965385\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  6500  and loss  23.3139400127\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  6600  and loss  22.9892739154\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  6700  and loss  23.1274374967\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  6800  and loss  22.8718364784\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  6900  and loss  23.3484901433\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  7000  and loss  22.5748082788\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  7100  and loss  23.5349964974\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  7200  and loss  22.6784218893\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  7300  and loss  22.8442099351\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  7400  and loss  22.7820438157\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  7500  and loss  22.360666106\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  7600  and loss  23.3001257815\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  7700  and loss  22.2086842955\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  7800  and loss  22.4573713216\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  7900  and loss  23.6316945166\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  8000  and loss  22.5057336045\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  8100  and loss  21.9392850738\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  8200  and loss  22.5955195507\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  8300  and loss  23.1481542058\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  8400  and loss  21.393570452\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  8500  and loss  22.1050813996\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  8600  and loss  22.1119931528\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  8700  and loss  22.1810571125\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  8800  and loss  22.92020148\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  8900  and loss  22.906386769\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  9000  and loss  21.7389546977\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  9100  and loss  21.8909281924\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  9200  and loss  21.9047516989\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  9300  and loss  22.5057323252\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  9400  and loss  21.7182240755\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  9500  and loss  21.3797427875\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  9600  and loss  22.4021111984\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  9700  and loss  22.0843514171\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  9800  and loss  21.8632955721\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  9900  and loss  21.9530906336\n"
      ]
     }
    ],
@@ -269,21 +901,29 @@
     "    else:\n",
     "        y_reshaped.append([0, 1])\n",
     "y_reshaped = np.array(y_reshaped)\n",
-    "weight_matrix = LogisticRegression.train(train[:, :], y_reshaped[:, :], iteration=1000, learning_rate=1)"
+    "weight_matrix = LogisticRegression.train(train[:, :], y_reshaped[:, :],\n",
+    "                                         iteration=10000, learning_rate=0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "477\n1000\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "47.9"
+       "47.699999999999996"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
